# predictsports

./: .env.example  .gitignore  .vercelignore  API_DOCS.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_COMPLETE.md  BUILD_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DEVELOPMENT.md  DISCUSSIONS_GUIDE.md  EXECUTIVE_SUMMARY.md  FILE_INDEX.md  FINAL_ACHIEVEMENT_REPORT.md  FINAL_VERIFICATION.md  GETTING_STARTED.md  GITHUB_ACHIEVEMENTS_SUMMARY.md  GITHUB_ISSUES_TEMPLATE.md  GOVERNANCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_INDEX.md  INSTALL_STATUS.md  LICENSE  PREMIER_LEAGUE_API_INTEGRATION.md  PROJECT_STATUS.md  PULL_REQUEST_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  README_QUICK.md  REFINEMENT_COMPLETE.md  RELEASE_NOTES_v0.1.0.md  SESSION_SUMMARY.md  (+12 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
data-pipelines/: package.json
engine/: .pylintrc  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
engine/src/: main.py
engine/src/features/: engineering.py
engine/src/lib/: config.py  redis_client.py
engine/src/models/: ensemble.py
engine/src/routes/: health.py  predictions.py
frontend/: .env.example  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
(+73 files in other folders)
