[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictsports-engine"
version = "1.0.0"
description = "AI sports prediction engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[tool.pylance]
python.analysis.stubPath = "./typings"
python.analysis.typeCheckingMode = "off"

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = false
python.pythonVersion = "3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
