[metadata]
name = predictsports-engine
version = 1.0.0
description = AI sports prediction engine
author = Predictsports Team

[tool:pytest]
testpaths = tests
python_files = test_*.py

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False

[pylint]
ignore-imports = yes
disable = import-error
